# Prompteer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.mjs  compose.yaml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/alembic/: env.py
apps/api/app/api/: deps.py
apps/api/app/core/: bootstrap.py  config.py  errors.py  feature_flags.py  logging.py  migrations.py  observability.py  ratelimit.py  security.py  time.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/integrations/: base.py  http.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/repositories/: __init__.py  billing.py  challenges.py  community.py  llm_usage.py  users.py
apps/api/app/schemas/: billing.py  challenge.py  community.py  config.py
apps/api/app/services/: billing.py  challenges.py  community.py  llm_quota.py
apps/api/app/tasks/: celery_app.py
apps/api/scripts/: export_openapi.py  start.sh
apps/api/tests/: __init__.py  conftest.py  support.py  test_billing_api.py  test_bootstrap.py  test_celery_app.py  test_challenges_api.py  test_community_api.py  test_email_mock.py  test_errors.py  test_feature_flags.py  test_google_oauth_mock.py  test_health.py  test_llm_mock.py  test_llm_quota.py  test_logging.py  test_migration_guardrails.py  test_models.py  test_observability.py  test_outbound_http.py  test_payments_mock.py  test_ratelimit.py  test_runtime_config.py  test_security.py  test_seed.py
(+280 files in other folders)
