[project]
name = "prompteer-api"
version = "0.1.0"
description = "FastAPI backend for Prompteer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.1",
  "asgi-correlation-id>=4.3.4",
  "celery>=5.5.3",
  "fastapi[standard]>=0.115.12",
  "gunicorn>=26.0.0",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.9.1",
  "pyjwt[crypto]>=2.10.1",
  "redis>=6.2.0",
  "sentry-sdk[fastapi]>=2.60.0",
  "slowapi>=0.1.9",
  "sqlmodel>=0.0.24",
  "structlog>=25.4.0",
  "uvicorn-worker>=0.4.0",
]

[dependency-groups]
dev = [
  "freezegun>=1.5.1",
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "respx>=0.22.0",
  "ruff>=0.11.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DTZ", "SIM", "RUF", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]
"app/integrations/google_oauth/mock.py" = ["S105"]
"app/integrations/payments/mock.py" = ["S105"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
  "app/alembic/*",
  "app/core/bootstrap.py",
  "app/db/seed.py",
  "app/tasks/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
